# Django-Blog

./: .env.example  .gitignore  Makefile  pyproject.toml
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_article_time_to_read.py  0003_bloguser_profile_image_alter_article_body.py  0004_article_image_url.py  0005_alter_article_title.py
blog/static/: style.css
blog/templates/: base.html  messages.html
blog/templates/blog/: article.html  index.html  navbar.html  profile.html  write_article.html
blog/templates/registration/: login.html  signup.html
blog_site/: settings.py  urls.py
frontend/blog-site/: package-lock.json  package.json
templates/: base.html
