[tool.poetry]
name = "djangoblog"
version = "0.1.0"
description = ""
authors = ["Sergey Nesterov <sergioreklamplay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'

exclude = '''
(
  /(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .mypy_cache
    | .venv
    | static
    | /*/migrations
    | /*/*/migrations
  )/
  | manage.py
)
'''
